2018-08-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Do not try to update the compositing policy when not in accelerated compositing mode
        https://bugs.webkit.org/show_bug.cgi?id=188787

        Reviewed by Simon Fraser.

        RenderLayerCompositor::updateCompositingPolicy() is called very often (called from
        RenderLayerCompositor::cacheAcceleratedCompositingFlags()) and it uses WTF::memoryFootprint() to decide the
        current compositing policy. Getting the memory footprint is an expensive operation in Linux (and I suspect other
        non-cocoa ports too), causing an excessive CPU usage. This caused the WPE and GTK+ unit test
        /webkit/WebKitWebContext/uri-scheme to start timing out in the bots, because the test expects things to happen
        fast and that's no longer the case. We could reduce the CPU usage a lot by not trying to update the policy when
        not in accelerated compositing mode. We will need a solution for the accelerated compositing mode, though.

        Fixes WPE/GTK+ unit test /webkit/WebKitWebContext/uri-scheme.

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateCompositingPolicy): Return early when not in accelerated compositing mode.

2018-08-21  Ryosuke Niwa  <rniwa@webkit.org>

        Replace booleans for modifier keys in UIEventWithKeyState with OptionSet<Modifier>
        https://bugs.webkit.org/show_bug.cgi?id=188777

        Reviewed by Simon Fraser.

        Replaced boolean arguments and instance variables for modifier keys (ctrl, alt, shift, and meta keys) in
        UIEventWithKeyState with OptionSet<Modifier> and isSimulated boolean in MouseRelatedEvent with IsSimulated
        enum class.

        Also made movementDelta always compiled instead of only when ENABLE(POINTER_LOCK) to simplify the code.

        No new tests since there should be no observable behavioral change.

        * dom/Element.cpp: